[gd_scene load_steps=7 format=2]

[ext_resource path="res://Vox/Ghosty.vox" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/ghost_basic_1.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Animation" id=2]
resource_name = "fantome"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ghosty:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.35, 0 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 1.24306 )

[sub_resource type="BoxShape" id=4]

[node name="ghost_basic_1" type="KinematicBody" groups=[
"enemy",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0479087, 0 )
collision_layer = 16
collision_mask = 17
script = ExtResource( 2 )

[node name="Ghosty" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.6, 0, 0, 0, 0.5, 0, 0.657263, 0 )
shape = SubResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.94106, 0.533985 )
light_color = Color( 0.329412, 0.262745, 0.262745, 1 )
light_energy = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fantome"
anims/fantome = SubResource( 2 )

[node name="PlayerVision" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.97116 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerVision"]
transform = Transform( 2.85038, 0, 0, 0, 1.25281, 0, 0, 0, 3.0815, 0, 0, 2.70346 )
shape = SubResource( 3 )

[node name="PlayerChase" type="Area" parent="."]
transform = Transform( 0.861874, 0, 0, 0, 1, 0, 0, 0, 0.627359, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerChase"]
transform = Transform( 6.71386, 0, 0, 0, 1, 0, 0, 0, 9.93346, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23517e-08, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 32

[node name="RaycastTimer" type="Timer" parent="RayCast"]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="PlayerVision" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="PlayerChase" to="." method="_on_PlayerChase_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RayCast/RaycastTimer" to="." method="_on_RaycastTimer_timeout"]
